[package]
name = "library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]

[dependencies]
ac-library-rs = "0.1.1"
proconio = { version = "=0.4.5", features = ["derive"] }
rand = "0.8.5"
ordered-float = "3.6.0"
itertools = "0.11.0"
rustc-hash = "=1.1.0"
